styles/Home.module.css
.container {
  padding: 0 2rem;
  background-color: #cad0d8;
}

.main {
  min-height: 100vh;
  padding: 4rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.footer {
  display: flex;
  flex: 1;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 2rem;
  color: #647380;
}

.gridWrapper {
  display: flex;
  flex-direction: column;
  margin: 3em auto;
  max-width: 1400px;
  width: 100%;
}

.gridWrapper h3 {
  text-transform: uppercase;
  text-align: left;
  margin-bottom: 10px;
  color: #647380;
  line-height: 1.15;
  letter-spacing: 0.1em;
}

.grid {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 20px;
}

